--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-scripts": "^5.0.1",
     "stable": "^0.1.8",
     "svgo": "^3.2.0",
-    "uuid": "^7.0.0",
-    "web-vitals": "^2.1.4"
+    "uuid": "^7.0.3",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
